--- a/style.css
+++ b/style.css
@@ -9,24 +9,33 @@ body {
     grid-template-rows: repeat(8, 12.5%);
 }
 
-.card {
-    border-radius: 10px;
-    border-color: cornflowerblue;
-    height: 100px;
-    
-}
-
 #images{
-    height: 75%;
+    display: grid;
+    grid-row-start: 1;
+    grid-row-end: 5;
+    grid-column-start: 2;
+    grid-column-end: 9;
+    grid-template-columns: 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20%;
+    height: 50%;
     width: 50%;
-    margin: 30px;
+    margin: 10px;
     padding: 10px;
-    grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(4, 25%);
 }
 
 img{
-    max-height: 25%;
-    max-width: 25%;
-    margin: 20px;
+    border-radius: 10px;
+    border-color: cornflowerblue;
+    width: 75%;
+    height: 75%;
+}
+
+h1{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 4;
+    grid-column-end: 9;
+    text-align: center;
+    background-color: aquamarine;
+    border: 8px solid black;
 }
